# openaleph-procrastinate

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-entrypoint.sh  manage.py  mkdocs.yml  pyproject.toml
.github/workflows/: docker.yml  e2e.yml  python.yml
docs/: architecture.md  conventions.md  howto.md  index.md  job.md  priority.md  setup.md
docs/overrides/partials/: copyright.html
docs/reference/: cli.md  defer.md  helpers.md  manage.md  model.md  settings.md
e2e/: jobs.json  pyproject.toml  tasks.py  test.sh  test_e2e.py
openaleph_procrastinate/: app.py  archive.py  cli.py  defer.py  exceptions.py  helpers.py  logging.py  model.py  settings.py  tasks.py  tracer.py  util.py
openaleph_procrastinate/manage/: db.py  sql.py  status.py
tests/: conftest.py  tasks.py  test_archive.py  test_cli.py  test_defer.py  test_logging.py  test_settings.py  test_tracer.py  test_util.py
