[project]
name = "openaleph-procrastinate"
version = "5.3.1"
description = "Task queue logic for OpenAleph built upon procrastinate"
authors = [
    { name = "Simon Wörpel", email = "simon.woerpel@pm.me" },
    { name = "Alex Ștefănescu", email = "alex@dataresearchcenter.org" },
]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "procrastinate (>=3.9.0,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "followthemoney (>=4.10.0,<5.0.0)",
    "ftmq (>=4.10.0,<5.0.0)",
    "anystore[http,s3] (>=1.2.5,<2.0.0)",
    "cachetools (<6)",
    "psycopg (>=3.3.4,<4.0.0)",
    "psycopg-pool (>=3.3.1,<4.0.0)",
]

[project.scripts]
openaleph-procrastinate = "openaleph_procrastinate.cli:cli"

[project.urls]
Homepage = "https://openaleph.org/docs/lib/openaleph-procrastinate"
Documentation = "https://openaleph.org/docs/lib/openaleph-procrastinate"
Repository = "https://github.com/openaleph/openaleph-procrastinate"
Issues = "https://github.com/openaleph/openaleph-procrastinate/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
black = "^26.5.0"
isort = "^8.0.1"
mypy = "^2.1.0"
pre-commit = "^4.0.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
cloudpickle = ">=2.2.1,<4.0.0"
pytest-env = "^1.6.0"
bump-pydantic = ">=0.7,<0.9"
rich = "<15"
moto = { extras = ["server"], version = "^5.1.4" }
pyaml = ">=25,<=30"
openaleph-servicelayer = "^1.24.0"
zensical = "^0.0.51"
mkdocstrings-python = "^2.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
DEBUG = 1
PROCRASTINATE_SYNC = 1
PROCRASTINATE_DB_URI = "memory:"
FSSPEC_S3_ENDPOINT_URL = "http://localhost:8888"
